fix : text align

--- a/infos/style.css
+++ b/infos/style.css
@@ -48,3 +48,7 @@ img {
 p {
     line-height: 1.3rem;
 }
+
+.subtitles{
+    margin: 4rem;
+}
